dnl Process this file with autoconf to produce a configure script.

AC_INIT(fakefax.c)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_MAKE_SET

RS_PATH_EMACS_LIBEXEC
RS_PATH_EMACS_LOCALLISP

AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h unistd.h)

AC_CHECK_FUNCS(strchr strerror)

AC_OUTPUT(Makefile sendfax.el snail.el)
